--- a/research-de.html
+++ b/research-de.html
@@ -17,10 +17,22 @@
     <a href="research-de.html" class="active-lang">DE</a>
   </div>
 
-  <!-- Shared Header and Nav -->
-  <div id="header"></div>
-  <div id="nav"></div>
-  <script src="load-shared.js"></script>
+<!-- header.html -->
+<header>
+  <h1><a href="index.html">JM Sugawara</a></h1>
+  <p><em>Bridging Cultures. Building Meaning.</em></p>
+</header>
+
+<!-- nav-de.html -->
+<nav>
+  <ul>
+    <li><a href="about-de.html">Über mich</a></li>
+    <li><a href="research-de.html">Forschung</a></li>
+    <li><a href="services-de.html">Services</a></li>
+    <li><a href="articles-de.html">Artikel</a></li>
+    <li><a href="contact-de.html">Kontakt</a></li>
+  </ul>
+</nav>
 
   <!-- Main Content -->
   <main>
