--- a/articles.html
+++ b/articles.html
@@ -17,10 +17,22 @@
     <a href="articles-de.html">DE</a>
   </div>
 
-  <!-- Shared Header and Nav -->
-  <div id="header"></div>
-  <div id="nav"></div>
-  <script src="load-shared.js"></script>
+<!-- header.html -->
+<header>
+  <h1><a href="index.html">JM Sugawara</a></h1>
+  <p><em>Bridging Cultures. Building Meaning.</em></p>
+</header>
+
+<!-- nav.html -->
+<nav>
+  <ul>
+    <li><a href="about.html">About</a></li>
+    <li><a href="research.html">Research</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="articles.html">Articles</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
   <!-- Main Content -->
   <main>
