--- a/contact-de.html
+++ b/contact-de.html
@@ -30,7 +30,7 @@
     <li><a href="research-de.html">Forschung</a></li>
     <li><a href="services-de.html">Services</a></li>
     <li><a href="articles-de.html">Artikel</a></li>
-    <li><a href="contact-de.html">Kontakt</a></li>
+    <li><a href="contact-de.html" class="active-page">Kontakt</a></li>
   </ul>
 </nav>
 
