--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <li><a href="research.html">Research</a></li>
     <li><a href="services.html">Services</a></li>
     <li><a href="articles.html">Articles</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="contact.html" class="active-page">Contact</a></li>
   </ul>
 </nav>
   <!-- Main Content -->
