--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <main>
     <section id="about">
       <h2>Welcome to My Profile</h2>
-      <p>Brief professional and academic introduction.</p>
+      <p>Let me introduce myself.</p>
     </section>
 
     <section id="research">
