--- a/research-de.html
+++ b/research-de.html
@@ -27,7 +27,7 @@
 <nav>
   <ul>
     <li><a href="about-de.html">Über mich</a></li>
-    <li><a href="research-de.html">Forschung</a></li>
+    <li><a href="research-de.html" class="active-page">Forschung</a></li>
     <li><a href="services-de.html">Services</a></li>
     <li><a href="articles-de.html">Artikel</a></li>
     <li><a href="contact-de.html">Kontakt</a></li>
@@ -38,7 +38,7 @@
   <main>
     <section>
       <div class="text-box">
-        <h2>Forschungsschwerpunkte</h2>
+        <h2>Forschung</h2>
         <ul>
           <li><strong>seit 2022:</strong> Reflexionen über Emotionen in Texten im Zusammenhang mit Erdbeben in der Tōhoku-Region</li>
           <li><strong>2022:</strong> „Corona-Katastrophe“ (<em>korona-ka</em>) während TOKYO2020 (veröffentlicht)</li>
