--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
   <ul>
     <li><a href="about.html">About</a></li>
     <li><a href="research.html">Research</a></li>
-    <li><a href="services.html">Services</a></li>
+    <li><a href="services.html" class="active-page">Services</a></li>
     <li><a href="articles.html">Articles</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
