--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <!-- nav.html -->
 <nav>
   <ul>
-    <li><a href="about.html">About</a></li>
+    <li><a href="about.html" class="active-page">About</a></li>
     <li><a href="research.html">Research</a></li>
     <li><a href="services.html">Services</a></li>
     <li><a href="articles.html">Articles</a></li>
