--- a/articles.html
+++ b/articles.html
@@ -29,7 +29,7 @@
     <li><a href="about.html">About</a></li>
     <li><a href="research.html">Research</a></li>
     <li><a href="services.html">Services</a></li>
-    <li><a href="articles.html">Articles</a></li>
+    <li><a href="articles.html" class="active-page">Articles</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
