--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
 <nav>
   <ul>
     <li><a href="about.html">About</a></li>
-    <li><a href="research.html">Research</a></li>
+    <li><a href="research.html" class="active-page">Research</a></li>
     <li><a href="services.html">Services</a></li>
     <li><a href="articles.html">Articles</a></li>
     <li><a href="contact.html">Contact</a></li>
