--- a/about-de.html
+++ b/about-de.html
@@ -26,7 +26,7 @@
 <!-- nav-de.html -->
 <nav>
   <ul>
-    <li><a href="about-de.html">Über mich</a></li>
+    <li><a href="about-de.html" class="active-page">Über mich</a></li>
     <li><a href="research-de.html">Forschung</a></li>
     <li><a href="services-de.html">Services</a></li>
     <li><a href="articles-de.html">Artikel</a></li>
