--- a/articles-de.html
+++ b/articles-de.html
@@ -26,10 +26,10 @@
 <!-- nav-de.html -->
 <nav>
   <ul>
-    <li><a href="about-de.html" class="active-page">Über mich</a></li>
+    <li><a href="about-de.html">Über mich</a></li>
     <li><a href="research-de.html">Forschung</a></li>
     <li><a href="services-de.html">Services</a></li>
-    <li><a href="articles-de.html">Artikel</a></li>
+    <li><a href="articles-de.html" class="active-page">Artikel</a></li>
     <li><a href="contact-de.html">Kontakt</a></li>
   </ul>
 </nav>
