--- a/about.html
+++ b/about.html
@@ -43,10 +43,10 @@
       <div class="text-box">
         <h2>About Me</h2>
         <p>
-          I am a researcher and writer with a deep-rooted passion for Japanese language and culture. My academic work is driven by a fascination with the ways in which <strong>language, culture, and emotion</strong> intersect, particularly within the context of Japanese linguistics.
+          Hey there! Have you ever experienced something that captivated you in the blink of an eye? For me that’s researching Japan, being enthralled by Japanese culture, language, literature, nature and discovering new aspects of their beauty. Academically, I am particularly intrigued by the intertwining of culture and language, which is beautifully represented in the study of Japan(ese).
         </p>
         <p>
-          My research interests include <strong>Japanese grammar (<em>bunpō</em>)</strong>, <strong>Classical Japanese (<em>bungo</em>)</strong>, <strong>conceptual semantics</strong>, <strong>cognitive linguistics</strong>, <strong>philosophy of language</strong>, and the <strong>development of Japanese writing systems</strong>. In my doctoral thesis, I explore how <strong>emotion is encoded and shaped through Japanese language and cultural practices</strong>.
+          My research interests are rooted in a deep fascination for <strong>Japanese grammar (<em>bunpō</em>)</strong>, <strong>Classical Japanese (<em>bungo</em>)</strong>, <strong>conceptual semantics</strong>, <strong>cognitive linguistics</strong>, <strong>philosophy of language</strong>, and the <strong>development of Japanese writing systems</strong>. In my doctoral thesis, I explore how <strong>emotions are intertwined with (Japanese) language and cultural practices</strong>.
         </p>
         <p>
           Beyond academia, I’m drawn to literature, short fiction, poetry, anime, and manga. I find joy in discovering cultural references that are subtle, layered, and poetic, and I enjoy making them accessible to others. One especially moving experience was being entrusted with a personal <em>haiku</em> collection by a palliative care patient of my spouse. That encounter continues to shape how I understand both language and human connection.
