--- a/about.html
+++ b/about.html
@@ -41,9 +41,9 @@
   <main>
     <section>
       <div class="text-box">
-        <h2>About Me</h2>
+        <h2>Hey there!</h2>
         <p>
-          Hey there! Have you ever experienced something that captivated you in the blink of an eye? For me that’s researching Japan, being enthralled by Japanese culture, language, literature, nature and discovering new aspects of their beauty. Academically, I am particularly intrigued by the intertwining of culture and language, which is beautifully represented in the study of Japan(ese).
+          Have you ever experienced something that captivated you in the blink of an eye? For me that’s researching Japan, being enthralled by Japanese culture, language, literature, nature and discovering new aspects of their beauty. Academically, I am particularly intrigued by the intertwining of culture and language, which is beautifully represented in the study of Japan(ese).
         </p>
         <p>
           My research interests are rooted in a deep fascination for <strong>Japanese grammar (<em>bunpō</em>)</strong>, <strong>Classical Japanese (<em>bungo</em>)</strong>, <strong>conceptual semantics</strong>, <strong>cognitive linguistics</strong>, <strong>philosophy of language</strong>, and the <strong>development of Japanese writing systems</strong>. In my doctoral thesis, I explore how <strong>emotions are intertwined with (Japanese) language and cultural practices</strong>.
