--- a/research-de.html
+++ b/research-de.html
@@ -41,8 +41,8 @@
         <h2>Forschung</h2>
         <ul>
           <li><strong>seit 2022:</strong> Reflexionen über Emotionen in Texten im Zusammenhang mit Erdbeben in der Tōhoku-Region</li>
-          <li><strong>2022:</strong> „Corona-Katastrophe“ (<em>korona-ka</em>) während TOKYO2020 (veröffentlicht)</li>
-          <li><strong>2021:</strong> Konzeptueller Bedeutungswandel am Beispiel von <em>ka</em> (und dem Neologismus „Corona-Katastrophe“) (Masterarbeit)</li>
+          <li><strong>2022:</strong> "Corona-Katastrophe" (<em>korona-ka</em>) während TOKYO2020 (veröffentlicht)</li>
+          <li><strong>2021:</strong> Konzeptueller Bedeutungswandel am Beispiel von <em>ka</em> (und dem Neologismus "Corona-Katastrophe") (Masterarbeit)</li>
           <li><strong>2019–2020:</strong> Übersetzung von Zeitzeugenberichten der Atombombenüberlebenden Frau Kimura (NET-GTAS Global Peace & Universität Bonn)</li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
         <ul>
           <li>
             <strong>2025/02:</strong> <em>On Emotion Expressions in Classical Japanese (bungo)</em><br>
-            <span>Tohoku University BUNGO-bun project 第10回研究会 (Eingeladener Vortrag)</span>
+            <span>Tōhoku University BUNGO-bun project 第10回研究会 (Vortrag; eingeladen)</span>
           </li>
           <li>
             <strong>2023/02:</strong> <em>Reflections on Emotive Traces in Texts</em><br>
@@ -73,7 +73,7 @@
         <h2>Übersetzungen</h2>
         <ul>
           <li><strong>2023:</strong> Empfehlungen für Sehenswürdigkeiten in Himeji (Japanisch–Deutsch)</li>
-          <li><strong>2022:</strong> „Olympic News Experience: Case Studies of 18 University Students“ von Shingo Dobashi, Hosei University (Japanisch–Deutsch)</li>
+          <li><strong>2022:</strong> "Olympic News Experience: Case Studies of 18 University Students" von Shingo Dobashi, Hosei University (Japanisch–Deutsch)</li>
           <li><strong>2019:</strong> Übersetzung des Berichts von Atombombenüberlebenden Frau Kimura (Japanisch–Deutsch)</li>
         </ul>
       </div>
@@ -82,7 +82,7 @@
     <section>
       <div class="text-box">
         <h2>Weitere Informationen</h2>
-        <p>Eine vollständige Übersicht über meine Forschungsaktivitäten findest du hier:</p>
+        <p>Eine vollständige Übersicht über meine Forschungsaktivitäten finden sich hier:</p>
         <ul class="external-links">
           <li><a href="https://researchmap.jp/jmsugawara?lang=de" target="_blank" rel="noopener">Researchmap-Profil</a></li>
           <li><a href="https://orcid.org/0000-0001-5079-998X" target="_blank" rel="noopener">ORCID iD</a></li>
