--- a/research.html
+++ b/research.html
@@ -41,8 +41,8 @@
         <h2>Research Areas</h2>
         <ul>
           <li><strong>since 2022:</strong> Reflections on textual emotions in response to earthquakes in the Tōhoku region</li>
-          <li><strong>2022:</strong> ‘Corona Calamity’ (<em>korona-ka</em>) during TOKYO2020 (published)</li>
-          <li><strong>2021:</strong> Conceptual Semantic Change as seen in <em>ka</em> (and the Neologism ‘Corona Calamity’) (Master’s Thesis)</li>
+          <li><strong>2022:</strong> "Corona Calamity" (<em>korona-ka</em>) during TOKYO2020 (published)</li>
+          <li><strong>2021:</strong> Conceptual Semantic Change as seen in <em>ka</em> (and the Neologism "Corona Calamity") (Master’s Thesis)</li>
           <li><strong>2019–2020:</strong> Translation of testimonies and interviews by atomic bomb survivor Mrs. Kimura (NET-GTAS Global Peace & University of Bonn)</li>
         </ul>
       </div>
@@ -74,7 +74,7 @@
         <h2>Translations</h2>
         <ul>
           <li><strong>2023:</strong> Recommendations for Sightseeing in Himeji City (Japanese-German)</li>
-          <li><strong>2022:</strong> “Olympic News Experience: Case Studies of 18 University Students” by Shingo Dobashi, Hosei University (Japanese-German)</li>
+          <li><strong>2022:</strong> "Olympic News Experience: Case Studies of 18 University Students" by Shingo Dobashi, Hosei University (Japanese-German)</li>
           <li><strong>2019:</strong> Translation of testimony by atomic bomb survivor Mrs. Kimura (Japanese-German)</li>
         </ul>
       </div>
